--- a/app/src/main/res/layout-land/activity_sign_in.xml
+++ b/app/src/main/res/layout-land/activity_sign_in.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_todo_sign_in"
+    android:id="@+id/activity_sign_in"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/to_sign_in_cardview"
+            android:id="@+id/sign_in_cardview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/to_do_sign_in_name"
+                        android:id="@+id/sign_in_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/to_do_sign_in_password"
+                        android:id="@+id/sign_in_password"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
@@ -76,7 +76,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/to_do_sign_in_connexion"
+                    android:id="@+id/sign_in_connexion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -103,7 +103,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/to_do_sign_up_cardview"
+            android:id="@+id/sign_in_create_account_cardview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -128,17 +128,17 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/imageView"
+                        android:layout_alignBottom="@+id/sign_in_create_account_image"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_toLeftOf="@+id/imageView"
+                        android:layout_toLeftOf="@+id/sign_in_create_account_image"
                         android:gravity="center"
                         android:text="Créer un nouvel utilisateur"
                         android:textSize="15sp" />
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/sign_in_create_account_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -155,7 +155,7 @@
                     android:visibility="invisible">
 
                     <EditText
-                        android:id="@+id/editText7"
+                        android:id="@+id/invisible_edittext"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -165,7 +165,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/to_do_sign_in_new_account"
+                    android:id="@+id/sign_in_create_account_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -181,7 +181,7 @@
     </RelativeLayout>
 
     <ProgressBar
-        android:id="@+id/to_do_sign_in_progress_bar"
+        android:id="@+id/sign_in_progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="60dip"
