--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_todo_sign_in"
+    android:id="@+id/activity_sign_in"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
 
     <ProgressBar
-        android:id="@+id/to_do_sign_in_progress_bar"
+        android:id="@+id/sign_in_progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="60dip"
@@ -23,7 +23,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/to_do_sign_in_cardview"
+            android:id="@+id/sign_in_cardview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -54,10 +54,10 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/to_do_sign_in_name"
+                        android:id="@+id/sign_in_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_above="@+id/to_do_sign_in_connexion"
+                        android:layout_above="@+id/sign_in_connexion"
                         android:layout_centerHorizontal="true"
                         android:layout_marginBottom="10dp"
                         android:ems="10"
@@ -72,12 +72,12 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/to_do_sign_in_password"
+                        android:id="@+id/sign_in_password"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_above="@+id/to_do_sign_in_name"
-                        android:layout_alignLeft="@+id/to_do_sign_in_name"
-                        android:layout_alignStart="@+id/to_do_sign_in_name"
+                        android:layout_above="@+id/sign_in_name"
+                        android:layout_alignLeft="@+id/sign_in_name"
+                        android:layout_alignStart="@+id/sign_in_name"
                         android:layout_marginBottom="10dp"
                         android:ems="10"
                         android:hint="@string/password_hint"
@@ -87,11 +87,11 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/to_do_sign_in_connexion"
+                    android:id="@+id/sign_in_connexion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/to_do_sign_in_new_account"
-                    android:layout_alignStart="@+id/to_do_sign_in_new_account"
+                    android:layout_alignLeft="@+id/sign_in_create_account_button"
+                    android:layout_alignStart="@+id/sign_in_create_account_button"
                     android:layout_centerVertical="true"
                     android:background="@color/button_background"
                     android:text="@string/sign_in" />
@@ -116,7 +116,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/to_do_sign_up_cardview"
+            android:id="@+id/sign_in_sign_up_cardview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -143,18 +143,18 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/imageView"
+                        android:layout_alignBottom="@+id/sign_in_create_account_image"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_toLeftOf="@+id/imageView"
+                        android:layout_toLeftOf="@+id/sign_in_create_account_image"
                         android:gravity="center"
                         android:text="@string/create_new_user"
                         android:textSize="15sp"
                         android:textAlignment="center" />
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/sign_in_create_account_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -170,7 +170,6 @@
                     android:visibility="invisible">
 
                     <EditText
-                        android:id="@+id/editText"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:ems="10"
@@ -180,7 +179,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/to_do_sign_in_new_account"
+                    android:id="@+id/sign_in_create_account_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
