--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_todo_sign_up"
+    android:id="@+id/activity_sign_up"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
 
     <ProgressBar
-        android:id="@+id/to_do_sign_up_progress_bar"
+        android:id="@+id/sign_up_progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:visibility="gone" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/to_do_sign_in_cardview"
+        android:id="@+id/sign_up_cardview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -48,12 +48,12 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/to_do_sign_up_name"
+                    android:id="@+id/sign_up_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/to_do_sign_up_password"
-                    android:layout_alignLeft="@+id/to_do_sign_up_password"
-                    android:layout_alignStart="@+id/to_do_sign_up_password"
+                    android:layout_above="@+id/sign_up_password"
+                    android:layout_alignLeft="@+id/sign_up_password"
+                    android:layout_alignStart="@+id/sign_up_password"
                     android:layout_marginBottom="10dp"
                     android:ems="10"
                     android:hint="@string/username_hint"
@@ -67,10 +67,10 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/to_do_sign_up_password"
+                    android:id="@+id/sign_up_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@+id/to_do_sign_up_new_account"
+                    android:layout_above="@+id/sign_up_create_account"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="10dp"
                     android:ems="10"
@@ -81,14 +81,14 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/to_do_sign_up_new_account"
+                android:id="@+id/sign_up_create_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/to_do_sign_up_password"
-                android:layout_alignLeft="@+id/to_do_sign_up_password"
+                android:layout_alignEnd="@+id/sign_up_password"
+                android:layout_alignLeft="@+id/sign_up_password"
                 android:layout_alignParentBottom="true"
-                android:layout_alignRight="@+id/to_do_sign_up_password"
-                android:layout_alignStart="@+id/to_do_sign_up_password"
+                android:layout_alignRight="@+id/sign_up_password"
+                android:layout_alignStart="@+id/sign_up_password"
                 android:background="@color/button_background"
                 android:text="@string/create_account" />
 
