--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -5,7 +5,7 @@
     tools:context="android.cesi.todo.fragment.UserListFragment">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/user_list_users"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dip"
@@ -20,13 +20,13 @@
         android:textSize="20sp" />
 
     <ListView
-        android:id="@+id/user_list"
+        android:id="@+id/user_list_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/user_list_users"
         android:layout_marginBottom="8dip"
         android:layout_marginLeft="8dip"
         android:layout_marginRight="8dip"
