--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -6,7 +6,7 @@
     android:weightSum="1">
 
     <TextView
-        android:id="@+id/to_do_user"
+        android:id="@+id/task_user_and_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
@@ -25,14 +25,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/to_do_text"
+            android:id="@+id/task_note"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.50"
             android:textSize="20sp" />
 
         <CheckBox
-            android:id="@+id/done"
+            android:id="@+id/task_done"
             android:layout_width="30dip"
             android:layout_height="wrap_content"
             android:checked="false"
