--- a/app/src/main/res/layout/toast_custom.xml
+++ b/app/src/main/res/layout/toast_custom.xml
@@ -8,7 +8,7 @@
     android:padding="8dip">
 
     <TextView
-        android:id="@+id/toast_custom_text"
+        android:id="@+id/toast_content"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
